<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/cardViewGenreGamesBackgroundTint"
    tools:context=".main.ui.main.GameDetailsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewImageIcon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@id/constraintLayoutInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="3">

        <ImageView
            android:id="@+id/imageViewDetailsIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/game_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/background_clouds" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutInside"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewScreenshots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewImageIcon"
        >

        <TextView
            android:id="@+id/textViewGameDetailsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/b612_mono_bold"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:minLines="2"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/primary_text"
            tools:text="Some game with some title" />

        <TextView
            android:id="@+id/textViewMetascoreTitle"
            style="@style/gameDetailsTextViewTitles"
            android:layout_marginEnd="28dp"
            android:text="@string/metascore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewGameDetailsName" />

        <TextView
            android:id="@+id/textViewMetascoreValue"
            style="@style/gameDetailsTextViewValuesWithFrame"
            app:layout_constraintStart_toEndOf="@id/textViewMetascoreTitle"
            app:layout_constraintTop_toBottomOf="@id/textViewGameDetailsName"
            tools:text="100" />

        <TextView
            android:id="@+id/textViewReleaseDateTitle"
            style="@style/gameDetailsTextViewTitles"
            android:text="@string/release_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewMetascoreTitle" />

        <TextView
            android:id="@+id/textViewReleaseDateValue"
            style="@style/gameDetailsTextViewValues"
            app:layout_constraintStart_toEndOf="@id/textViewReleaseDateTitle"
            app:layout_constraintTop_toBottomOf="@id/textViewMetascoreTitle"
            tools:text="10.02.2002" />

        <TextView
            android:id="@+id/textViewUpdatedTitle"
            style="@style/gameDetailsTextViewTitles"
            android:layout_marginEnd="4dp"
            android:text="@string/updated"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewReleaseDateTitle"
            app:layout_constraintTop_toBottomOf="@id/textViewMetascoreTitle" />

        <TextView
            android:id="@+id/textViewUpdatedValue"
            style="@style/gameDetailsTextViewValues"
            app:layout_constraintStart_toEndOf="@id/textViewUpdatedTitle"
            app:layout_constraintTop_toBottomOf="@id/textViewMetascoreTitle"
            tools:text="10.02.2002" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/textViewReleaseDateTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/textViewPlaytimeTitle"
            style="@style/gameDetailsTextViewTitles"
            android:layout_marginEnd="46dp"
            android:text="@string/playtime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingBar" />

        <TextView
            android:id="@+id/textViewPlaytimeValue"
            style="@style/gameDetailsTextViewValuesWithFrame"
            app:layout_constraintStart_toEndOf="@id/textViewPlaytimeTitle"
            app:layout_constraintTop_toBottomOf="@id/ratingBar"
            tools:text="100" />

        <TextView
            android:id="@+id/textViewPlatformTitle"
            style="@style/gameDetailsTextViewTitles"
            android:text="@string/platforms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewPlaytimeValue" />

        <TextView
            android:id="@+id/textViewPlatformValues"
            style="@style/gameDetailsTextViewValues"
            app:layout_constraintStart_toEndOf="@id/textViewPlatformTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewPlaytimeValue"
            android:layout_marginHorizontal="8dp"
            tools:text="PC, Xbox One, Playstation, Mac, Android, PlayStation 3, PlayStation 4" />

        <TextView
            android:id="@+id/textViewScreenshots"
            style="@style/gameDetailsTextViewTitles"
            android:text="@string/screenshots"
            app:layout_constraintTop_toBottomOf="@id/textViewPlatformValues"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewScreenshots"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayoutInside"
        app:layout_constraintVertical_weight="2" />

</androidx.constraintlayout.widget.ConstraintLayout>